--- a/package.json
+++ b/package.json
@@ -1,10 +1,31 @@
 {
-  "name": "module-exports-anonymous-func",
-  "version": "1.0.0",
-  "description": "A module that exports an anonymous function",
-  "main": "index.js",
-  "repository": "https://github.com/bramkok/module-exports-anonymous-func",
+  "name": "module-exports-functions",
+  "version": "0.0.0",
+  "description": "Test anonymous and named functions",
+  "repository": "https://github.com/bramkok/module-exports-functions",
   "author": "Bram Kok <bramkok.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "bin": "./bin/module-exports-functions",
+  "scripts": {
+    "start": "./bin/module-exports-functions",
+    "start:help": "yarn start --help",
+    "start:named": "yarn start --named",
+    "start:anonymous": "yarn start --anonymous",
+    "lint": "yarn eslint .",
+    "lint:fix": "yarn lint --fix"
+  },
+  "devDependencies": {
+    "babel-eslint": "8.2.3",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-config-bramkok": "0.2.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "prettier": "1.12.1"
+  },
+  "dependencies": {
+    "commander": "^2.15.1"
+  }
 }
